[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/planet_terp"]

[project]
name = "planet-terp-client"
version = "0.1.4"
description = "a python client for the planet terp api"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Yashas Bhat", email = "ybhat@umd.edu" },
]

dependencies = ["requests"]

[dependency-groups]
dev = ["ruff>=0.14.8"]

[project.urls]
Homepage = "https://github.com/ynbh/planet-terp-client"
Repository = "https://github.com/ynbh/planet-terp-client"
Issues = "https://github.com/ynbh/planet-terp-client/issues"
